1112: Fix 'box-sizing mixing is deprecated' warning.
Also fix a 'variable too long' warning. Well, mute it because we really want that long variable name.

--- a/source/assets/css/content/_grids.scss
+++ b/source/assets/css/content/_grids.scss
@@ -1,11 +1,3 @@
-$susy: (
-	gutter-position: inside-static,
-	container: 100%,
-	columns: 12,
-	column-width: 69px,
-	gutters: 32px/69px
-);
-
 .grid__example {
 	@include span(4);
 
